	- md5.h: use cdb/uint32.h (built by configure)  for defining 
	  uint32. [1144851]
	- vpopmail.c: fix vauth_user() to not clobber pw_uid and pw_gid.
	- vpopmail.c: If setting user quota for new user fails because newly
	  created user does not exist, sleep 5 seconds and try again.  
	  (This can happen on servers using MySQL replication.)

	Michael Bowe
	- configure.in: fix typo of where the configure script says it
	  is checking for qmail-inject when in fact it was checking for
	  qmail-newmrh 
	- Documentation updates to README.roamingusers. Mention the 
	  requirement of tcpserver for POP-before-SMTP. Also include
	  some documentation on IMAP-before-SMTP. [1110269]

5.4.9 - released 26-Dec-04

	Jeremy Kister
	- Makefile.am: fix install problem on Solaris.  Some .h files
	  weren't being installed correctly.

	Charles Boening
	- Fix logging in PostgreSQL.
	- Change ENABLE_{MY|PG}SQL_LOGGING to ENABLE_SQL_LOGGING.
	- Replace --enable-{my|pg}sql-logging with --enable-sql-logging
	  in configure options.

	Tom Collins
	- Tweaking of Charles Boening's changes.
	- vchkpw: Fix problem in md5.h causing segfault in SMTP AUTH on 
	  amd64. [964843, 958799]
	- vpopmail.h: Add new error and flag defines from 5.5 series.
	- vchkpw: log webmail connections as 'vchkpw-webmail'.
	- vpopmail.c: fix problem related to sending SIGHUP to qmail-send.
	  Original problem could cause "Signal 1 caught by ps" error.

5.4.8 - released 12-Nov-2004

	Rick Widmer
	- vadddomain: Check for existing domain before prompting for
	  password.
	- vdeldomain: Fix uninitialized variable warning.

	Tom Collins
	- Fix problems with valias code in vmysql.c and vpgsql.c.  Storing
	  aliases in Postgres should work now, and it should fix problems
	  with processing Maildir valias entries in vdelivermail. [985011,
	  1024706, 1033801]
	- Fix bug in vmoddomlimits that wiped out the Domain Quota 
	  when editing default limits.
	- Change columns in Postgres valias table to varchar from char.